feat: Simplify configuration system with python-dotenv
- Replace complex YAML config with simple .env file loading
- Add python-dotenv dependency for automatic .env file loading
- Implement environment variable overrides with MCPBASE_ prefix
- Create .env.example with all available configuration options
- Update README with simplified configuration instructions
- Maintain backward compatibility with existing functionality
- All tests passing and server fully functional

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@
 # Core MCP dependencies
 mcp>=1.0.0
 
+# Configuration dependencies
+python-dotenv>=1.0.0
+
 # Optional HTTP server dependencies
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
